--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 info.app.name=Metadata Service
 info.app.description=Metadata service also known as config service. It hold the metadata/config required across different services.
-info.app.version=1.0.0
+info.app.version=6.0.0
 
 spring.output.ansi.enabled=ALWAYS
 security.basic.enabled=false
@@ -21,7 +21,8 @@ application.cacheControl.control.max.age=60
 jasypt.encryptor.password=abcd
 
 # Mongodb database URL
-spring.data.mongodb.uri=mongodb://localhost/metadata
+spring.data.mongodb.uri=mongodb://172.17.0.11/metadata
+
 #spring.data.mongodb.uri=mongodb://mongo/metadata
 
 
